little styling changes, menu fully done, both desktop and mobile phone

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -17,6 +17,7 @@ $navbar-menu: rgb(27, 27, 27);
 // Text
 $text-color: grey;
 $black-text-hover: rgb(107, 107, 107);
+$white-text-hover: rgb(202, 202, 202);
 
 
 //Wrapper
