--- a/src/scss/pages/_photo-albums-page.scss
+++ b/src/scss/pages/_photo-albums-page.scss
@@ -22,6 +22,9 @@
                         padding-top: 1em;
                         font-size: 2.2em;
                     }
+                    .divider-text.category {
+                        padding-top: 3em;
+                    }
                 }
 
                 .album-description {
