--- a/src/scss/components/_photo-albums.scss
+++ b/src/scss/components/_photo-albums.scss
@@ -26,13 +26,10 @@ $card-spacing: 2vw;
 
                 @media (max-width: $layout-breakpoint-small) {
                     grid-template-columns: repeat(1, 1fr);
+                    grid-row-gap: 10vh;
                 }
 
                 .album-card {
-                    @media (max-width: $layout-breakpoint-small) {
-                        padding-bottom: 3em;
-                    }
-
                     .album-cover-container {
                         aspect-ratio: 12/16;
                         display: block;
