page loader finally working

--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -21,7 +21,7 @@
 
     .container {
         background-color: $black;
-        height: 100vh;
+        height: auto;
         padding-inline: $wrapper-value;
         position: relative;
         z-index: 2;
