--- a/src/scss/components/_page-loader.scss
+++ b/src/scss/components/_page-loader.scss
@@ -1,23 +1,21 @@
 .pageloader {
   position: absolute;
-  z-index: 1001;
-  background-color: #000000;
+  z-index: 98;
+  background-color: $navbar-menu;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   width: 100%;
-  height: 100vh;
+  min-height: 100%;
+  display: grid;
+  place-items: center;
 
   .pageloader-inner {
+    text-align: center;
     .pageloader-text {
+      font-size: calc(clamp(4.5rem, 7vw, 6rem) * 0.875);
       color: white;
-
-      margin: 0;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
 
       &::first-letter {
         text-transform: uppercase;
