navbar innner fade away when page loading

--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -27,9 +27,10 @@ $menu-button-bar-height: 1px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    transition: 0.5s ease-in-out;
 
     &.loading {
-      display: none;
+      opacity: 0;
     }
 
     @media (max-width: $layout-breakpoint-small) {
