--- a/src/scss/components/_page-loader.scss
+++ b/src/scss/components/_page-loader.scss
@@ -6,8 +6,8 @@
   left: 0;
   right: 0;
   bottom: 0;
-  width: 100%;
-  min-height: 100%;
+  width: 100vw;
+  min-height: 100vh;
   display: grid;
   place-items: center;
 
@@ -16,10 +16,6 @@
     .pageloader-text {
       font-size: calc(clamp(4.5rem, 7vw, 6rem) * 0.875);
       color: white;
-
-      &::first-letter {
-        text-transform: uppercase;
-      }
     }
   }
 }
