--- a/src/scss/components/_page-loader.scss
+++ b/src/scss/components/_page-loader.scss
@@ -6,8 +6,8 @@
   left: 0;
   right: 0;
   bottom: 0;
-  width: 100vw;
-  min-height: 100vh;
+  width: 100%;
+  min-height: 100%;
   display: grid;
   place-items: center;
 
