--- a/src/scss/components/_photo-albums.scss
+++ b/src/scss/components/_photo-albums.scss
@@ -156,7 +156,7 @@ $card-spacing: 2vw;
                         }
 
                         .content-year-date {
-                            color: $text-color;
+                            color: $black;
                             font-size: 1.5rem;
                             font-weight: 500;
                         }
