menu styling change, animated cursor added

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -24,11 +24,6 @@
 @import "components/navbar-menu";
 @import "components/cursor";
 
-
-a:hover ~ .cursor {
-  transform: scale(10);
-}
-
 body {
   background-color: $background;
   min-height: 100% !important;
@@ -44,13 +39,6 @@ body {
   &.disable-scroll {
     overflow-y: hidden;
   }
-
-  a:hover {
-    .cursor {
-      width: 100px;
-      height: 100px;
-    }
-  }
 }
 
 main {
@@ -61,16 +49,37 @@ main {
   }
 }
 
-.cursor {
-  position: fixed;
-  background-color: $white;
-  width: 15px;
-  height: 15px;
-  border-radius: 50%;
-  top: 0;
-  left: 0;
-  pointer-events: none;
-  mix-blend-mode: difference;
+// .cursor {
+//   position: fixed;
+//   background-color: $white;
+//   width: 15px;
+//   height: 15px;
+//   border-radius: 50%;
+//   top: 0;
+//   left: 0;
+//   pointer-events: none;
+//   mix-blend-mode: difference;
 
-  z-index: 1000;
+//   z-index: 1000;
+// }
+
+.cursor__dot div {
+  z-index: 999999 !important;
 }
+
+// .cursor__dot div:last-child {
+//   mix-blend-mode: difference;
+//   background-color: $white !important;
+// }
+
+.cursor__dot div:last-child {
+  mix-blend-mode: difference;
+  background-color: $white !important;
+}
+
+.cursor__dot div:first-child {
+  mix-blend-mode: difference;
+  background-color: $white !important;
+}
+
+
