--- a/src/scss/components/_navbar-menu.scss
+++ b/src/scss/components/_navbar-menu.scss
@@ -3,6 +3,8 @@ $portfolioImage: url("../../assets/images/image-3-banner.jpeg");
 $aboutImage: url("../../assets/images/image_3_menu.jpeg");
 $motionImage: url("../../assets/images/image_4_menu.jpeg");
 
+$footer-menu-font-size: 1.2rem;
+
 .navbar-menu {
     top: 0;
     right: 0;
@@ -42,7 +44,7 @@ $motionImage: url("../../assets/images/image_4_menu.jpeg");
 
                 .navlink-container {
                     cursor: pointer;
-                    padding-bottom: 3em;
+                    padding-bottom: 5em;
 
                     //Disables padding on bottom for the last child
                     &:last-child {
@@ -57,7 +59,7 @@ $motionImage: url("../../assets/images/image_4_menu.jpeg");
                             letter-spacing: 1px;
                             color: $white;
                             text-decoration: none;
-                            font-size: calc(clamp(5rem, 7vw, 7.5rem) * 0.875);
+                            font-size: calc(clamp(5rem, 7vw, 6rem) * 0.875);
                             transition: 0.3s ease-in-out;
 
                             &.active::before {
@@ -75,7 +77,6 @@ $motionImage: url("../../assets/images/image_4_menu.jpeg");
 
                             &:hover {
                                 margin-left: 10px;
-                                color: rgb(121, 121, 121);
                             }
                         }
                     }
@@ -113,46 +114,79 @@ $motionImage: url("../../assets/images/image_4_menu.jpeg");
             width: 100%;
             height: 1px;
             background-color: rgb(83, 83, 83);
+
+            @media (min-width: $layout-breakpoint-small) {
+                display: none;
+            }
         }
 
         .menu-footer {
-            display: block;
-            padding-top: 5vh;
-            width: 100%;
+            position: absolute;
+            left: 0;
+            bottom: 0;
             display: flex;
             align-items: center;
             justify-content: space-between;
+            width: 100%;
+            margin-bottom: 4vh;
 
             @media (max-width: $layout-breakpoint-small) {
                 display: none;
             }
 
             .footer-email {
+                position: absolute;
+                left: $wrapper-value-navbar;
+
                 a {
                     text-decoration: none;
-                    font-size: 1.6rem;
+                    font-size: $footer-menu-font-size;
                     color: $white;
                     transition: 0.3s ease-in-out;
+                    text-transform: uppercase;
+                    letter-spacing: 2px;
                 }
             }
 
             .footer-socials {
-                display: flex;
+                position: absolute;
+                left: 50%;
+                transform: translate(-50%, 0);
 
-                .social-icon {
-                    transition: 0.3s ease-in-out;
-                    font-size: calc(clamp(1.5rem, 7vw, 2rem) * 0.875);
+                a {
                     color: $white;
-                    padding-inline: 1.3em;
-
-                    &:first-child {
-                        padding-left: 0px !important;
-                    }
-
-                    &:hover {
-                        color: rgb(199, 199, 199);
-                    }
+                    text-transform: uppercase;
+                    font-size: $footer-menu-font-size;
+                    padding-inline: 1.5em;
+                    text-decoration: none;
+                    letter-spacing: 2px;
                 }
+                // display: flex;
+
+                // .social-icon {
+                //     transition: 0.3s ease-in-out;
+                //     font-size: calc(clamp(1.5rem, 7vw, 2rem) * 0.875);
+                //     color: $white;
+                //     padding-inline: 1.3em;
+
+                //     &:first-child {
+                //         padding-left: 0px !important;
+                //     }
+
+                //     &:hover {
+                //         color: rgb(199, 199, 199);
+                //     }
+                // }
+            }
+
+            .footer-copyright {
+                position: absolute;
+                right: $wrapper-value-navbar;
+                color: $white;
+                text-transform: uppercase;
+                font-size: $footer-menu-font-size;
+                padding-inline: 1.5em;
+                letter-spacing: 2px;
             }
         }
 
